tests/baselines/reference/contextuallyTypedParametersPositionIncludesClassWithPrivateMember2.errors.txt
contextuallyTypedParametersPositionIncludesClassWithPrivateMember2.ts(18,8): error TS2345: Argument of type '{ doStuff: (arg: (arg: string) => void) => void; }' is not assignable to parameter of type 'Foo'.
  Property 'foo' is missing in type '{ doStuff: (arg: (arg: string) => void) => void; }' but required in type 'Foo'.


==== contextuallyTypedParametersPositionIncludesClassWithPrivateMember2.ts (1 errors) ====
    class Foo {
      private foo = "foo";
      doStuff(cb: (arg: string) => void) {}
    }
    
    interface FooLike {
      doStuff: (cb: (arg: number) => void) => void;
    }
    
    declare function useIt(arg: Foo | FooLike): void;
    
    useIt({
      doStuff: (arg) => {},
    });
    
    declare function useIt2(arg: Foo): void;
    
    useIt2({
           ~
      doStuff: (arg) => {},
    ~~~~~~~~~~~~~~~~~~~~~~~
    });
    ~
!!! error TS2345: Argument of type '{ doStuff: (arg: (arg: string) => void) => void; }' is not assignable to parameter of type 'Foo'.
!!! error TS2345:   Property 'foo' is missing in type '{ doStuff: (arg: (arg: string) => void) => void; }' but required in type 'Foo'.
!!! related TS2728 contextuallyTypedParametersPositionIncludesClassWithPrivateMember2.ts:2:11: 'foo' is declared here.
    
    declare function useIt3(arg: FooLike): void;
    
    useIt3({
      doStuff: (arg) => {},
    });
    